# foxx-engine

./: .gitignore  CMakeLists.txt  README.md  backup.c  log.txt  makefile
include/: asset.h  context.h  foxx.h  glmath.h  input.h  linmath.h  model.h  object.h  physics.h  renderer.h  scene.h  shader.h  texture.h  world.h
include/Assets/: actor.h  camera.h  obj.h  prop.h
include/Model/: buffer.h  cone.h  cube.h  cylinder.h  obj.h  plane.h  pyramid.h  sphere.h  tetrahedron.h
include/Object/: cone.h  cube.h  cylinder.h  fem.h  plane.h  pyramid.h  sphere.h  tetrahedron.h  texture.h
include/Object/Mesh/: cube.h  obj.h  sphere.h
include/Renderer/: camera.h  shader.h
include/Scene/: actor.h  asset.h  camera.h  prop.h
include/Texture/: buffer.h  dds.h
include/Tools/: array.h  glmath.h  hashtable.h  log.h
old/: .gitignore  makefile
old/include/: context.h  object.h
old/include/Object/: mesh.h  texture.h
old/include/Object/Mesh/: cone.h  cylinder.h  fem.h  plane.h  pyramid.h  tetrahedron.h
old/include/Renderer/: shader.h
old/include/Tools/: array.h  hashtable.h  log.h
old/src/: main.c  object.c
old/src/Object/: texture.c
old/src/Object/Mesh/: cylinder.c  fem.c  plane.c  sphere.c  tetrahedron.c
old/src/Renderer/: camera.c
old/src/Tools/: array.c  glmath.c  log.c
old/tools/model-editor/: makefile
old/tools/model-editor/include/: obj.h
old/tools/model-editor/src/: main.c  obj.c
src/: asset.c  context.c  glmath.c  input.c  main.c  model-editor.c  model.c  object.c  renderer.c  scene.c  shader.c  texture.c  world.c
src/Assets/: actor.c  camera.c  obj.c  prop.c
src/Model/: buffer.c  cone.c  cube.c  cylinder.c  obj.c  obj.h  plane.c  pyramid.c  sphere.c  tetrahedron.c
src/Object/: cone.c  cube.c  cylinder.c  fem.c  mesh.c  plane.c  pyramid.c  sphere.c  tetrahedron.c  texture.c
src/Object/Mesh/: cone.c  cube.c  obj.c  pyramid.c
src/Renderer/: camera.c  shader.c
src/Scene/: actor.c  asset.c  camera.c  prop.c
src/Texture/: buffer.c  dds.c
src/Tools/: array.c  glmath.c  hashtable.c  log.c
tools/model-editor/: main.c  makefile
tools/model-editor/include/: obj.h
tools/model-editor/src/: main.c  obj.c
